[metadata]
name = edman_cli
version = 2022.3.30
author = Masaki Ohno
author_email = masakio@post.kek.jp
license = MIT License
description = KEK IMSS SBRC/PF Experimental Data Management System
url = https://github.com/ryde/edman_cli
long_description = file: README.rst
classifier =
    License :: OSI Approved :: MIT License
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    pymongo>=4.0.2
    python-dateutil>=2.8.2
    jmespath>=1.0.0
    edman>=2022.3.30

[options.packages.find]
exclude =
    tests