[metadata]
name = edman_cli
version = 2023.01.11
author = Masaki Ohno
author_email = masakio@post.kek.jp
license = MIT License
description = KEK IMSS SBRC/PF Experimental Data Management System
url = https://github.com/ryde/edman_cli
long_description = file: README.rst
long_description_content_type = text/x-rst
classifier =
    License :: OSI Approved :: MIT License
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    pymongo>=4.3.3
    python-dateutil>=2.8.2
    jmespath>=1.0.1
    edman>=2023.1.11

[options.packages.find]
exclude =
    tests